--- a/composer.json
+++ b/composer.json
@@ -11,23 +11,27 @@
         "scout",
         "search"
     ],
-    "require": {
-        "php": "^7.1.|^8.0",
-        "elasticsearch/elasticsearch": ">=7.0 <=7.11.0",
-        "laravel/scout": "^7.0|^8.0"
-    },
     "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "ScoutElasticModel\\": "src/"
-        }
-    },
     "authors": [
         {
             "name": "dangxs",
             "email": "254227091@qq.com"
         }
     ],
+    "require": {
+        "php": "^7.1.|^8.0",
+        "elasticsearch/elasticsearch": ">=7.0 <=7.11.0",
+        "laravel/scout": "^7.0|^8.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.0|^8.0",
+        "mockery/mockery": "^1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "ScoutElasticModel\\": "src/"
+        }
+    },
     "extra": {
         "laravel": {
             "providers": [
