--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,12 @@
         "psr-4": {
             "ScoutElasticModel\\": "src/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "ScoutElasticModel\\ElasticServiceProvider"
+            ]
+        }
     }
 }
